--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,1 +1,16 @@
-/home/aky/.dotfiles/gitconfig
+[user]
+	name = Ryoh Akiyoshi
+	email = ryo614@gmail.com
+[core]
+	editor = vim
+	excludesfile = ${HOME}/.gitignore_global
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+[init]
+	defaultBranch = main
+[push]
+	default = current
+    asdf
