--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	name = Ryoh Akiyoshi
 	email = ryo614@gmail.com
+	signingkey = 7BB2E3D78C475467
 [core]
 	editor = /usr/bin/env nvim
 [filter "lfs"]
@@ -17,3 +18,5 @@
 	rebase = false
 [include]
     path = ~/.gitconfig.local
+[commit]
+	gpgsign = true
